--- a/.github/workflows/setup_repository.yaml
+++ b/.github/workflows/setup_repository.yaml
@@ -9,7 +9,7 @@ jobs:
     name: Reinitialize repository
     runs-on: ubuntu-latest
     env:
-      REPO_SETUP_TOKEN: ${{ secrets.REPO_SETUP_TOKEN }}
+      REPO_SETUP_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
       - name: Do not run scaffolding on template repository
         shell: bash
